hphp/hack/test/typecheck/reactive/ref_if_rx_enabled1.php.exp
File "ref_if_rx_enabled1.php", line 3, characters 16-16:
Encountered unexpected token '&'. (Parsing[1002])
